Updated pom dependencies to multiline