@@ -6,10 +6,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>plg</groupId>
 	<artifactId>libPlg</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.4</version>
 	
 	<properties>
-		<java.version>11</java.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
 	</properties>
 	
 	<repositories>
@@ -82,28 +83,6 @@
 			<version>29.0-jre</version>
 		</dependency>
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>11</source>
-					<target>11</target>
-					<compilerArgs>
-						<arg>--add-exports</arg>
-						<arg>jdk.compiler/com.sun.tools.javac.model=org.adrianwalker.multilinestring</arg>
-						<arg>--add-exports</arg>
-						<arg>jdk.compiler/com.sun.tools.javac.processing=org.adrianwalker.multilinestring</arg>
-						<arg>--add-exports</arg>
-						<arg>jdk.compiler/com.sun.tools.javac.tree=org.adrianwalker.multilinestring</arg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 	
 	<distributionManagement>
 		<repository>
